--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
           6: "m",
           length: 7
         },
-        length: 3
+        'length': 3
       };
       var hash = {
-        q: "jd.com",
+        q: "qq.com",
         w: "weibo.com",
         e: "ele.me",
         r: "baidu.com",
@@ -158,7 +158,7 @@
     }
     function listenToUser(hash){
       document.onkeypress = function(xzkjcnxlkcjlk) {
-        var key = xzkjcnxlkcflk["key"];
+        var key = xzkjcnxlkcjlk['key'];
         var website = hash[key];
         // location.href = 'http://'+ website
         window.open("http://" + website, "_blank");
